@@ -42,7 +42,7 @@
         <spring-boot-dependencies.version>4.0.5</spring-boot-dependencies.version>
         <plantuml.version>1.2026.2</plantuml.version>
         <swagger-annotations.version>2.2.43</swagger-annotations.version>
-        <pekko.version>1.1.3</pekko.version>
+        <pekko.version>2.0.0-M2</pekko.version>
     </properties>
 
     <dependencyManagement>
@@ -149,7 +149,7 @@
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
                         <jvm>${java.home}/bin/java</jvm>
-                        <argLine>--enable-preview</argLine>
+                        <argLine>--enable-preview --add-opens java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -157,7 +157,7 @@
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring-boot-dependencies.version}</version>
                     <configuration>
-                        <jvmArguments>--enable-preview</jvmArguments>
+                        <jvmArguments>--enable-preview --add-opens java.base/jdk.internal.misc=ALL-UNNAMED</jvmArguments>
                     </configuration>
                 </plugin>
                 <plugin>
